# windrow

./: Dockerfile  README.md  app.py  pyproject.toml  sigsum.py  submit.py  utils.py
.github/workflows/: docker.yaml
src/windrow/: submit.py
