[project]
name = "windrow"
version = "0.1.0"
description = "Sigsum leaf data repository"
readme = "README.md"

authors = [
    { name = "Florian Larysch", email = "fl@n621.de" }
]
license = "Apache-2.0"

requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "pynacl>=1.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
